# git_root

./: LICENSE  README.md  pyproject.toml  setup.py
git_root/: __init__.py  git_root.py
